--- a/NYC Taxi Fare Prediction/NYC Taxi Fare Prediction.ipynb
+++ b/NYC Taxi Fare Prediction/NYC Taxi Fare Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def taxi_data_light():\n",
+    "    #function to read in a light dataframe consisting of only parts of the total data\n",
     "    col_datatypes = {'fare_amount': 'float32',\n",
     "              'pickup_datetime': 'str', \n",
     "              'pickup_longitude': 'float32',\n",
@@ -31,7 +32,8 @@
     "    \n",
     "    cols = list(col_datatypes.keys())\n",
     "    \n",
-    "    n = 3\n",
+    "    #enter 1/n parts of the data to load, lower n increase amount of data\n",
+    "    n = 1000\n",
     "    X_light = pd.read_csv('train.csv', dtype=col_datatypes, header=0, usecols=cols,\n",
     "                         skiprows= lambda i : i % n != 0)\n",
     "    X_light['pickup_datetime'] = X_light['pickup_datetime'].str.slice(0, 16)\n",
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def taxi_data_full():\n",
+    "    #function to read the complete dataset\n",
     "    col_datatypes = {'fare_amount': 'float32',\n",
     "              'pickup_datetime': 'str', \n",
     "              'pickup_longitude': 'float32',\n",
@@ -98,11 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nyc_mapping():\n",
+    "    #function to create polygons(areas) of locations within New York which has specific additional fees, such as airports\n",
     "    #lat / lon vertices of Manhattan_polygon\n",
     "    v0 = [40.697509, -74.011890]\n",
     "    v1 = [40.701999, -74.023220]\n",
@@ -163,11 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loc_mapping(lat, lon):\n",
+    "    #function to return the location of a specific coordinate\n",
     "    Manhattan_polygon = nyc_mapping()[0]\n",
     "    JFK = nyc_mapping()[1]\n",
     "    Newark = nyc_mapping()[2]\n",
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,87 +205,60 @@
       "INFO: Pandarallel will run on 8 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 18474618 entries, 0 to 18474617\n",
+      "RangeIndex: 55423 entries, 0 to 55422\n",
       "Data columns (total 7 columns):\n",
-      "fare_amount          float32\n",
-      "pickup_datetime      datetime64[ns, UTC]\n",
-      "pickup_longitude     float32\n",
-      "pickup_latitude      float32\n",
-      "dropoff_longitude    float32\n",
-      "dropoff_latitude     float32\n",
-      "passenger_count      uint8\n",
+      "fare_amount          55423 non-null float32\n",
+      "pickup_datetime      55423 non-null datetime64[ns, UTC]\n",
+      "pickup_longitude     55423 non-null float32\n",
+      "pickup_latitude      55423 non-null float32\n",
+      "dropoff_longitude    55423 non-null float32\n",
+      "dropoff_latitude     55423 non-null float32\n",
+      "passenger_count      55423 non-null uint8\n",
       "dtypes: datetime64[ns, UTC](1), float32(5), uint8(1)\n",
-      "memory usage: 510.9 MB\n",
+      "memory usage: 1.5 MB\n",
       "None\n",
-      "          fare_amount           pickup_datetime  pickup_longitude  \\\n",
-      "0                 5.7 2011-08-18 00:35:00+00:00          -73.9827   \n",
-      "1                12.1 2011-01-06 09:50:00+00:00          -74.0010   \n",
-      "2                 9.0 2012-12-03 13:10:00+00:00          -74.0065   \n",
-      "4                 7.7 2011-04-05 17:11:00+00:00          -74.0018   \n",
-      "5                 5.3 2009-07-22 16:08:00+00:00          -73.9811   \n",
-      "...               ...                       ...               ...   \n",
-      "18474613          6.5 2014-05-02 07:36:00+00:00          -73.9898   \n",
-      "18474614         18.0 2015-06-13 20:45:00+00:00          -73.9873   \n",
-      "18474615          6.1 2011-09-16 00:46:00+00:00          -73.9909   \n",
-      "18474616          4.5 2015-03-22 16:37:00+00:00          -73.9811   \n",
-      "18474617         14.1 2011-04-02 22:04:00+00:00          -73.9705   \n",
+      "       fare_amount           pickup_datetime  pickup_longitude  \\\n",
+      "0        10.900000 2012-05-18 18:41:00+00:00          -73.9885   \n",
+      "1         7.500000 2015-02-01 02:25:00+00:00          -73.9918   \n",
+      "2        56.799999 2012-10-23 07:57:00+00:00          -73.9882   \n",
+      "3        14.500000 2010-07-31 22:24:00+00:00          -73.9845   \n",
+      "4        13.300000 2011-02-28 18:37:00+00:00          -73.9833   \n",
+      "...            ...                       ...               ...   \n",
+      "55418    10.500000 2013-02-03 22:29:00+00:00          -73.9849   \n",
+      "55419    17.500000 2012-12-22 03:38:00+00:00          -73.9842   \n",
+      "55420     8.500000 2013-10-14 08:27:00+00:00          -73.9716   \n",
+      "55421    14.900000 2009-08-05 07:43:00+00:00          -74.0000   \n",
+      "55422     8.000000 2012-11-13 15:04:00+00:00          -73.9725   \n",
       "\n",
-      "          pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
-      "0                 40.7613           -73.9912           40.7506   \n",
-      "1                 40.7316           -73.9729           40.7582   \n",
-      "2                 40.7267           -73.9931           40.7316   \n",
-      "4                 40.7375           -73.9981           40.7228   \n",
-      "5                 40.7377           -73.9942           40.7284   \n",
-      "...                   ...                ...               ...   \n",
-      "18474613          40.7391           -73.9869           40.7517   \n",
-      "18474614          40.7553           -74.0152           40.7102   \n",
-      "18474615          40.7366           -73.9923           40.7403   \n",
-      "18474616          40.7375           -73.9855           40.7293   \n",
-      "18474617          40.7523           -73.9605           40.7973   \n",
+      "       pickup_latitude  dropoff_longitude  dropoff_latitude  passenger_count  \\\n",
+      "0              40.7584           -73.9838           40.7301                1   \n",
+      "1              40.7262           -73.9877           40.7392                5   \n",
+      "2              40.7401           -73.7824           40.6467                2   \n",
+      "3              40.7590           -74.0117           40.7078                2   \n",
+      "4              40.7437           -73.9645           40.7108                1   \n",
+      "...                ...                ...               ...              ...   \n",
+      "55418          40.7298           -74.0018           40.7467                1   \n",
+      "55419          40.7491           -73.9118           40.7610                1   \n",
+      "55420          40.7552           -73.9784           40.7514                1   \n",
+      "55421          40.6786           -74.0072           40.7287                1   \n",
+      "55422          40.7654           -73.9630           40.7724                1   \n",
       "\n",
-      "          passenger_count  cityblock_dist      dist Pickup_area Dropoff_area  \\\n",
-      "0                       2          0.0192  1.388197   Manhattan    Manhattan   \n",
-      "1                       1          0.0547  3.789202   Manhattan    Manhattan   \n",
-      "2                       1          0.0183  1.256003   Manhattan    Manhattan   \n",
-      "4                       2          0.0184  1.662071   Manhattan    Manhattan   \n",
-      "5                       1          0.0224  1.513656   Manhattan    Manhattan   \n",
-      "...                   ...             ...       ...         ...          ...   \n",
-      "18474613                1          0.0155  1.420493   Manhattan    Manhattan   \n",
-      "18474614                2          0.0730  5.535132   Manhattan    Manhattan   \n",
-      "18474615                3          0.0051  0.427559   Manhattan    Manhattan   \n",
-      "18474616                1          0.0126  0.983534   Manhattan    Manhattan   \n",
-      "18474617                1          0.0550  5.068037   Manhattan    Manhattan   \n",
+      "       cityblock_dist       dist Pickup_area Dropoff_area  weekday  hour  year  \n",
+      "0              0.0330   3.167657   Manhattan    Manhattan        4    18  2012  \n",
+      "1              0.0171   1.484598   Manhattan    Manhattan        6     2  2015  \n",
+      "2              0.2992  20.252454   Manhattan          JFK        1     7  2012  \n",
+      "3              0.0784   6.132409   Manhattan    Manhattan        5    22  2010  \n",
+      "4              0.0517   3.983790   Manhattan      unknown        0    18  2011  \n",
+      "...               ...        ...         ...          ...      ...   ...   ...  \n",
+      "55418          0.0338   2.357931   Manhattan    Manhattan        6    22  2013  \n",
+      "55419          0.0843   6.255068   Manhattan      unknown        5     3  2012  \n",
+      "55420          0.0106   0.712624   Manhattan    Manhattan        0     8  2013  \n",
+      "55421          0.0573   5.596690     unknown    Manhattan        2     7  2009  \n",
+      "55422          0.0165   1.116952   Manhattan    Manhattan        1    15  2012  \n",
       "\n",
-      "          weekday  hour  year  \n",
-      "0               3     0  2011  \n",
-      "1               3     9  2011  \n",
-      "2               0    13  2012  \n",
-      "4               1    17  2011  \n",
-      "5               2    16  2009  \n",
-      "...           ...   ...   ...  \n",
-      "18474613        4     7  2014  \n",
-      "18474614        5    20  2015  \n",
-      "18474615        4     0  2011  \n",
-      "18474616        6    16  2015  \n",
-      "18474617        5    22  2011  \n",
-      "\n",
-      "[18090446 rows x 14 columns]\n",
-      "Missing value columns: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
-      "  if getattr(data, 'base', None) is not None and \\\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15:27:08] WARNING: src/learner.cc:686: Tree method is automatically selected to be 'approx' for faster speed. To use old behavior (exact greedy algorithm on single machine), set tree_method to 'exact'.\n"
+      "[54228 rows x 14 columns]\n",
+      "Missing value columns: []\n",
+      "MSE: 15.239699\n"
      ]
     }
    ],
@@ -298,6 +276,7 @@
     "    import scipy as sp\n",
     "    from pandarallel import pandarallel\n",
     "\n",
+    "    #using pandarallel to run pandas in parallel. decreases computing time\n",
     "    pandarallel.initialize()\n",
     "\n",
     "\n",
@@ -319,7 +298,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "    #choose which dataframe to load\n",
     "    #X = taxi_data_full() \n",
     "    X = taxi_data_light()\n",
     "    cols = ['pickup_longitude','pickup_latitude', 'dropoff_longitude', 'dropoff_latitude']\n",
@@ -482,9 +461,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pip install pandarallel"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
