Update Rossman store sales.ipynb

--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -24,9 +24,9 @@
     "# @hidden_cell\n",
     "credentials = {\n",
     "    'endpoint': 'https://s3-api.us-geo.objectstorage.service.networklayer.com',\n",
-    "    'service_id': 'iam-ServiceId-c661b205-b3f6-43f5-ba36-e66d9f64531f',\n",
+    "    'service_id': '",
     "    'iam_service_endpoint': 'https://iam.ng.bluemix.net/oidc/token',\n",
-    "    'api_key': '-ynWC7Y9F5nKlpdFO21VLMfHYNAPb03HUbUqKxnp07WH'\n",
+    "    'api_key': '",
     "}\n",
     "\n",
     "configuration_name = 'os_c63666ea1c9d403e811d4c86742ad623_configs'\n",
