Update Rossman store sales.ipynb

--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -22,12 +22,7 @@
     "\n",
     "import ibmos2spark\n",
     "# @hidden_cell\n",
-    "credentials = {\n",
-    "    'endpoint': 'https://s3-api.us-geo.objectstorage.service.networklayer.com',\n",
-    "    'service_id': '",
-    "    'iam_service_endpoint': 'https://iam.ng.bluemix.net/oidc/token',\n",
-    "    'api_key': '",
-    "}\n",
+    "credentials = {}\n",
     "\n",
     "configuration_name = 'os_c63666ea1c9d403e811d4c86742ad623_configs'\n",
     "cos = ibmos2spark.CloudObjectStorage(sc, credentials, configuration_name, 'bluemix_cos')\n",
