--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -122,12 +122,8 @@
     "\n",
     "# @hidden_cell\n",
     "# The following code accesses a file in your IBM Cloud Object Storage. It includes your credentials.\n",
-    "# You might want to remove those credentials before you share the notebook.\n",
-    "client_c63666ea1c9d403e811d4c86742ad623 = ibm_boto3.client(service_name='s3',\n",
-    "    ibm_api_key_id='-ynWC7Y9F5nKlpdFO21VLMfHYNAPb03HUbUqKxnp07WH',\n",
-    "    ibm_auth_endpoint=\"https://iam.ng.bluemix.net/oidc/token\",\n",
-    "    config=Config(signature_version='oauth'),\n",
-    "    endpoint_url='https://s3-api.us-geo.objectstorage.service.networklayer.com')\n",
+    "# You might want to remove those credentials before you share the notebook.\n"
+    
     "\n",
     "body = client_c63666ea1c9d403e811d4c86742ad623.get_object(Bucket='m5forecastingaccuracy-donotdelete-pr-5fybfotj7xtmkk',Key='sample_submission.csv')['Body']\n",
     "# add missing __iter__ method, so pandas accepts body as file-like object\n",
