--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -24,9 +24,9 @@
     "# @hidden_cell\n",
     "credentials = {\n",
     "    'endpoint': 'https://s3-api.us-geo.objectstorage.service.networklayer.com',\n",
-    "    'service_id': 'iam-ServiceId-c661b205-b3f6-43f5-ba36-e66d9f64531f',\n",
+    "    'service_id': '',\n",
     "    'iam_service_endpoint': 'https://iam.ng.bluemix.net/oidc/token',\n",
-    "    'api_key': '-ynWC7Y9F5nKlpdFO21VLMfHYNAPb03HUbUqKxnp07WH'\n",
+    "    'api_key': ''\n",
     "}\n",
     "\n",
     "configuration_name = 'os_c63666ea1c9d403e811d4c86742ad623_configs'\n",
@@ -129,7 +129,7 @@
     "# The following code accesses a file in your IBM Cloud Object Storage. It includes your credentials.\n",
     "# You might want to remove those credentials before you share the notebook.\n",
     "client_c63666ea1c9d403e811d4c86742ad623 = ibm_boto3.client(service_name='s3',\n",
-    "    ibm_api_key_id='-ynWC7Y9F5nKlpdFO21VLMfHYNAPb03HUbUqKxnp07WH',\n",
+    "    ibm_api_key_id='',\n",
     "    ibm_auth_endpoint=\"https://iam.ng.bluemix.net/oidc/token\",\n",
     "    config=Config(signature_version='oauth'),\n",
     "    endpoint_url='https://s3-api.us-geo.objectstorage.service.networklayer.com')\n",
