--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -47,15 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# credentials has been removed\n",
     "import ibmos2spark\n",
     "# @hidden_cell\n",
-    "credentials = {\n",
-    "    'endpoint': 'https://s3-api.us-geo.objectstorage.service.networklayer.com',\n",
-    "    'service_id': '',\n",
-    "    'iam_service_endpoint': 'https://iam.ng.bluemix.net/oidc/token',\n",
-    "    'api_key': ''\n",
-    "}\n",
+    "credentials = {}\n",
     "\n",
     "configuration_name = 'os_c63666ea1c9d403e811d4c86742ad623_configs'\n",
     "cos = ibmos2spark.CloudObjectStorage(sc, credentials, configuration_name, 'bluemix_cos')\n",
@@ -137,61 +132,6 @@
     "  .option('header', 'true')\\\n",
     "  .load(cos.url('test.csv', 'm5forecastingaccuracy-donotdelete-pr-5fybfotj7xtmkk'), inferSchema= 'true')\n",
     "df_test.take(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting heatmapz\n",
-      "  Downloading https://files.pythonhosted.org/packages/26/5d/3928028fcb8de3bf09bb17975ca7e83f8b2f00cd28c10bc1150f8c418372/heatmapz-0.0.4-py3-none-any.whl\n",
-      "Collecting pandas (from heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/bb/71/8f53bdbcbc67c912b888b40def255767e475402e9df64050019149b1a943/pandas-1.0.3-cp36-cp36m-manylinux1_x86_64.whl (10.0MB)\n",
-      "\u001b[K    100% |################################| 10.0MB 1.2MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting seaborn (from heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/e6/54aaaafd0b87f51dfba92ba73da94151aa3bc179e5fe88fc5dfb3038e860/seaborn-0.10.1-py3-none-any.whl (215kB)\n",
-      "\u001b[K    100% |################################| 225kB 7.0MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting matplotlib>=3.0.3 (from heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/93/4b/52da6b1523d5139d04e02d9e26ceda6146b48f2a4e5d2abfdf1c7bac8c40/matplotlib-3.2.1-cp36-cp36m-manylinux1_x86_64.whl (12.4MB)\n",
-      "\u001b[K    100% |################################| 12.4MB 1.4MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting pytz>=2017.2 (from pandas->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4f/a4/879454d49688e2fad93e59d7d4efda580b783c745fd2ec2a3adf87b0808d/pytz-2020.1-py2.py3-none-any.whl (510kB)\n",
-      "\u001b[K    100% |################################| 512kB 5.6MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting python-dateutil>=2.6.1 (from pandas->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d4/70/d60450c3dd48ef87586924207ae8907090de0b306af2bce5d134d78615cb/python_dateutil-2.8.1-py2.py3-none-any.whl (227kB)\n",
-      "\u001b[K    100% |################################| 235kB 6.6MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting numpy>=1.13.3 (from pandas->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/03/27/e35e7c6e6a52fab9fcc64fc2b20c6b516eba930bb02b10ace3b38200d3ab/numpy-1.18.4-cp36-cp36m-manylinux1_x86_64.whl (20.2MB)\n",
-      "\u001b[K    100% |################################| 20.2MB 942kB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting scipy>=1.0.1 (from seaborn->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dc/29/162476fd44203116e7980cfbd9352eef9db37c49445d1fec35509022f6aa/scipy-1.4.1-cp36-cp36m-manylinux1_x86_64.whl (26.1MB)\n",
-      "\u001b[K    100% |################################| 26.1MB 750kB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting cycler>=0.10 (from matplotlib>=3.0.3->heatmapz)\n",
-      "  Downloading https://files.pythonhosted.org/packages/f7/d2/e07d3ebb2bd7af696440ce7e754c59dd546ffe1bbe732c8ab68b9c834e61/cycler-0.10.0-py2.py3-none-any.whl\n",
-      "Collecting kiwisolver>=1.0.1 (from matplotlib>=3.0.3->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ae/23/147de658aabbf968324551ea22c0c13a00284c4ef49a77002e91f79657b7/kiwisolver-1.2.0-cp36-cp36m-manylinux1_x86_64.whl (88kB)\n",
-      "\u001b[K    100% |################################| 92kB 6.5MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 (from matplotlib>=3.0.3->heatmapz)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/8a/bb/488841f56197b13700afd5658fc279a2025a39e22449b7cf29864669b15d/pyparsing-2.4.7-py2.py3-none-any.whl (67kB)\n",
-      "\u001b[K    100% |################################| 71kB 5.6MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting six>=1.5 (from python-dateutil>=2.6.1->pandas->heatmapz)\n",
-      "  Downloading https://files.pythonhosted.org/packages/65/eb/1f97cb97bfc2390a276969c6fae16075da282f5058082d4cb10c6c5c1dba/six-1.14.0-py2.py3-none-any.whl\n",
-      "\u001b[31mtensorflow 1.13.1 requires tensorboard<1.14.0,>=1.13.0, which is not installed.\u001b[0m\n",
-      "\u001b[31mpytest-astropy 0.8.0 requires pytest-cov>=2.0, which is not installed.\u001b[0m\n",
-      "\u001b[31mpytest-astropy 0.8.0 requires pytest-filter-subpackage>=0.1, which is not installed.\u001b[0m\n",
-      "\u001b[31mpytest-astropy 0.8.0 has requirement pytest>=4.6, but you'll have pytest 3.10.1 which is incompatible.\u001b[0m\n",
-      "Installing collected packages: pytz, six, python-dateutil, numpy, pandas, cycler, kiwisolver, pyparsing, matplotlib, scipy, seaborn, heatmapz\n",
-      "Successfully installed cycler-0.10.0 heatmapz-0.0.4 kiwisolver-1.2.0 matplotlib-3.2.1 numpy-1.18.4 pandas-1.0.3 pyparsing-2.4.7 python-dateutil-2.8.1 pytz-2020.1 scipy-1.4.1 seaborn-0.10.1 six-1.14.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "#!pip install heatmapz"
    ]
   },
   {
