Update Rossman store sales.ipynb

--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -291,7 +291,7 @@
     "\n",
     "Also Promo seems to correlate with the Sales (meaning that the store is running a promotion on a specific day).\n",
     "\n",
-    "Features that actually are categorical (such as DayOfWeek, Year, Month, Week) is ignored (will be onehot-encoded later)."
+    "Features that actually are categorical (such as DayOfWeek, Year, Month, Week) is ignored (will be transformed with cos and sine to cyclical features later)."
    ]
   },
   {
