--- a/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
+++ b/Rossman Store Sales (Pyspark)/Rossman store sales.ipynb
@@ -19,8 +19,8 @@
      "output_type": "stream",
      "text": [
       "Waiting for a Spark session to start...\n",
-      "Spark Initialization Done! ApplicationId = app-20200601104239-0000\n",
-      "KERNEL_ID = 671800ad-11c9-4bcb-88e6-bff26884fd67\n"
+      "Spark Initialization Done! ApplicationId = app-20200605163300-0000\n",
+      "KERNEL_ID = eac91371-456d-4ca8-b586-441772403cce\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "# @hidden_cell\n",
     "# The project token is an authorization token that is used to access project resources like data sources, connections, and used by platform APIs.\n",
     "from project_lib import Project\n",
-    "project = Project(spark.sparkContext, 'Removed', 'Removed')\n",
+    "project = Project(spark.sparkContext, 'removed', 'removed')\n",
     "pc = project.project_context\n"
    ]
   },
@@ -52,9 +52,9 @@
     "# @hidden_cell\n",
     "credentials = {\n",
     "    'endpoint': 'https://s3-api.us-geo.objectstorage.service.networklayer.com',\n",
-    "    'service_id': 'Removed',\n",
+    "    'service_id': 'removed',\n",
     "    'iam_service_endpoint': 'https://iam.ng.bluemix.net/oidc/token',\n",
-    "    'api_key': 'Removed'\n",
+    "    'api_key': 'removed'\n",
     "}\n",
     "\n",
     "configuration_name = 'os_c63666ea1c9d403e811d4c86742ad623_configs'\n",
@@ -101,7 +101,7 @@
     "# The following code accesses a file in your IBM Cloud Object Storage. It includes your credentials.\n",
     "# You might want to remove those credentials before you share the notebook.\n",
     "client_c63666ea1c9d403e811d4c86742ad623 = ibm_boto3.client(service_name='s3',\n",
-    "    ibm_api_key_id='Removed',\n",
+    "    ibm_api_key_id='removed',\n",
     "    ibm_auth_endpoint=\"https://iam.ng.bluemix.net/oidc/token\",\n",
     "    config=Config(signature_version='oauth'),\n",
     "    endpoint_url='https://s3-api.us-geo.objectstorage.service.networklayer.com')\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
    "source": [
     "# Remove entries when store is closed (Open = 0) from training data.\n",
     "\n",
-    "df_j = df_j.filter(df_j.Open == 1)\n"
+    "df_j = df_j.filter(df_j.Open == 1)"
    ]
   },
   {
@@ -261,12 +261,12 @@
     }
    ],
    "source": [
-    "print('Number of records in df_j:', df_j.count())"
+    "print('Number of records in df_j:', df_j.count())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -470,12 +470,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a feature for days since competition opened"
+    "Create a feature for days since competition opene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[Row(Store=1, DayOfWeek=5, Date=datetime.datetime(2015, 7, 31, 0, 0), Sales=5263, Customers=555, Open=1, Promo=1, StateHoliday='0', SchoolHoliday=1, StoreType='c', Assortment='a', CompetitionDistance=1270, Promo2=0, Promo2SinceWeek=None, Promo2SinceYear=None, PromoInterval=None, DaysSinceCompOpen=2524)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,12 +529,12 @@
     "\n",
     "df_j_test = df_j_test.withColumn('Year',F.year('Date'))\n",
     "df_j_test = df_j_test.withColumn('Month',F.month('Date'))\n",
-    "df_j_test = df_j_test.withColumn('Week',F.weekofyear('Date'))\n"
+    "df_j_test = df_j_test.withColumn('Week',F.weekofyear('Date'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "CompetitionDistance    2186"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,11 +820,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fill in 0 when in avgCustomers when null\n",
+    "# Fill in 0 in avgCustomers when null\n",
     "df_j_test = df_j_test.fillna(0, subset='AvgCustomers')"
    ]
   },
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -922,11 +922,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Promo2*dayofmonth\n",
+    "# Feature for how long has the promotion been running\n",
     "df_j = df_j.withColumn('DaysSincePromoStarted', df_j.Promo2 * F.dayofmonth('Date'))\n",
     "df_j_test = df_j_test.withColumn('DaysSincePromoStarted', df_j_test.Promo2 * F.dayofmonth('Date'))\n",
     "\n",
@@ -942,12 +942,15 @@
     "\n",
     "# Create feature for how many days left on promo\n",
     "df_j = df_j.withColumn('DaysUntilPromoEnds', df_j.Promo2 * F.datediff(df_j.lastdayofmonth, df_j.Date))\n",
-    "df_j_test = df_j_test.withColumn('DaysUntilPromoEnds', df_j_test.Promo2 * F.datediff(df_j_test.lastdayofmonth, df_j_test.Date))\n"
+    "df_j_test = df_j_test.withColumn('DaysUntilPromoEnds', df_j_test.Promo2 * F.datediff(df_j_test.lastdayofmonth, df_j_test.Date))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1012,16 +1015,18 @@
     }
    ],
    "source": [
+    "# Create train and validation set for optimizing model before submitting to Kaggle\n",
+    "\n",
     "df_j_before_150615 = df_j.filter(df_j.Date < '2015-06-15')\n",
     "df_j_after_150615 = df_j.filter(df_j.Date > '2015-06-15')\n",
     "\n",
     "print('df_j_after count:', df_j_after_150615.count())\n",
-    "print('df_j_before count:', df_j_before_150615.count())"
+    "print('df_j_before count:', df_j_before_150615.count())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,9 +1089,9 @@
     "gbt = GBTRegressor(featuresCol='features',\n",
     "                           labelCol='Sales',\n",
     "                           seed=1,\n",
-    "                           stepSize = 0.05,\n",
-    "                           maxIter = 120,\n",
-    "                           maxDepth = 5\n",
+    "                           stepSize = 0.17,\n",
+    "                           maxIter = 150,\n",
+    "                           maxDepth = 6\n",
     "                           )\n",
     "\n",
     "\n",
@@ -1098,18 +1103,26 @@
     "\n",
     "# Create the evaluator, evaluate on Root mean square error\n",
     "pip_evaluator = RegressionEvaluator(\n",
-    "    labelCol='Sales', predictionCol='prediction', metricName='rmse')"
+    "    labelCol='Sales', predictionCol='prediction', metricName='rmse')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train and test model\n",
+    "The metric for evaluating the model on Kaggle is Root mean squared percentage error."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gbt_model():\n",
     "    \n",
-    "    dev_model = 0\n",
+    "    dev_model = 1\n",
     "    \n",
     "    # During development, test on dates after 2015-06-15\n",
     "    if dev_model == 1:\n",
@@ -1118,7 +1131,13 @@
     "    \n",
     "        predictions = g_model.transform(s_test)\n",
     "        rmse = pip_evaluator.evaluate(predictions)\n",
-    "\n",
+    "        \n",
+    "        preds_pandas = predictions.select('prediction').toPandas()\n",
+    "        act_pandas = s_test.select('Sales').toPandas()\n",
+    "        \n",
+    "        rmspe = np.sqrt(np.mean(np.square(((act_pandas.Sales - preds_pandas.prediction) / act_pandas.Sales)), axis=0))\n",
+    "        \n",
+    "        print(\"Root Mean Squared Percentage Error (RMSPE) on test data = %g\" % rmspe)\n",
     "        print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)\n",
     "    \n",
     "    # Before submitting to Kaggle, train on entire dataset upto 2015-07-31. \n",
@@ -1126,21 +1145,30 @@
     "    if dev_model == 0:\n",
     "        g_model = pipeline.fit(df_j_red)\n",
     "    \n",
-    "    return g_model"
+    "    return g_model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Percentage Error (RMSPE) on test data = 0.131477\n",
+      "Root Mean Squared Error (RMSE) on test data = 933.565\n"
+     ]
+    }
+   ],
    "source": [
     "model = gbt_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,22 +1183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-----------------+\n",
-      "|summary|       prediction|\n",
-      "+-------+-----------------+\n",
-      "|  count|            41088|\n",
-      "|   mean|6054.223292289697|\n",
-      "| stddev|2765.810060352756|\n",
-      "|    min|972.8051959203464|\n",
-      "|    max|27896.82588283824|\n",
-      "+-------+-----------------+\n",
+      "+-------+------------------+\n",
+      "|summary|        prediction|\n",
+      "+-------+------------------+\n",
+      "|  count|             41088|\n",
+      "|   mean| 6052.211100531663|\n",
+      "| stddev|2850.1249246667862|\n",
+      "|    min|-468.3774080823542|\n",
+      "|    max| 31650.34735246614|\n",
+      "+-------+------------------+\n",
       "\n"
      ]
     }
@@ -1181,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1192,20 +1220,20 @@
       "|summary|        prediction|\n",
       "+-------+------------------+\n",
       "|  count|              5995|\n",
-      "|   mean|2391.5527219844444|\n",
-      "| stddev| 678.4589059614143|\n",
-      "|    min| 972.8051959203464|\n",
-      "|    max|13285.755456309284|\n",
+      "|   mean|2268.0343139206525|\n",
+      "| stddev| 783.0059740259985|\n",
+      "|    min|-468.3774080823542|\n",
+      "|    max|13262.931958073728|\n",
       "+-------+------------------+\n",
       "\n",
       "+-------+------------------+\n",
       "|summary|        prediction|\n",
       "+-------+------------------+\n",
       "|  count|             41088|\n",
-      "|   mean| 5705.280570125153|\n",
-      "| stddev|3294.1631945481786|\n",
+      "|   mean|5721.2904981184465|\n",
+      "| stddev|3343.5611864951475|\n",
       "|    min|               0.0|\n",
-      "|    max| 27896.82588283824|\n",
+      "|    max| 31650.34735246614|\n",
       "+-------+------------------+\n",
       "\n"
      ]
@@ -1226,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1271,27 +1299,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10274</td>\n",
-       "      <td>4086.549744</td>\n",
+       "      <td>3947.384981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8562</td>\n",
-       "      <td>6693.337412</td>\n",
+       "      <td>6636.539133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>32543</td>\n",
-       "      <td>4700.296122</td>\n",
+       "      <td>4499.664605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>18853</td>\n",
-       "      <td>6223.431180</td>\n",
+       "      <td>6282.802480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>40255</td>\n",
-       "      <td>6968.830703</td>\n",
+       "      <td>7018.901033</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1299,14 +1327,14 @@
       ],
       "text/plain": [
        "      Id        Sales\n",
-       "0  10274  4086.549744\n",
-       "1   8562  6693.337412\n",
-       "2  32543  4700.296122\n",
-       "3  18853  6223.431180\n",
-       "4  40255  6968.830703"
+       "0  10274  3947.384981\n",
+       "1   8562  6636.539133\n",
+       "2  32543  4499.664605\n",
+       "3  18853  6282.802480\n",
+       "4  40255  7018.901033"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,25 +1345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'file_name': 'submission6a.csv',\n",
+       "{'file_name': 'submission11a.csv',\n",
        " 'message': 'File saved to project storage.',\n",
        " 'bucket_name': 'm5forecastingaccuracy-donotdelete-pr-5fybfotj7xtmkk',\n",
-       " 'asset_id': '7897d67a-7e20-4ba2-8629-d33bb6dc7450'}"
+       " 'asset_id': '3f9a3aae-44f2-40f5-8271-1f3f4230b2ca'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "project.save_data(\"submission6a.csv\", kp_pandas.to_csv(index=False))\n"
+    "project.save_data(\"submission11a.csv\", kp_pandas.to_csv(index=False))\n"
    ]
   },
   {
@@ -1344,7 +1372,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trees = 100, alpha = 0.05, RMSE = 1297"
+    "# trees = 100, alpha = 0.05, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.175502\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1217.86\n",
+    "\n",
+    "\n",
+    "# trees = 100, alpha = 0.05, max_depth = 4\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.181056\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1280.72\n",
+    "\n",
+    "\n",
+    "# trees = 130, alpha = 0.05, max_depth = 4\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.181013\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1249.99\n",
+    "\n",
+    "\n",
+    "# trees = 150, alpha = 0.03, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.175622\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1224.75\n",
+    "\n",
+    "# trees = 150, alpha = 0.04, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.173132\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1189.28\n",
+    "\n",
+    "# trees = 150, alpha = 0.06, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.166341\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1137.56\n",
+    "\n",
+    "# trees = 150, alpha = 0.08, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.160572\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1098.98\n",
+    "\n",
+    "# trees = 150, alpha = 0.1, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.154513\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1063.26\n",
+    "\n",
+    "# trees = 150, alpha = 0.13, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.152329\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1038.12\n",
+    "\n",
+    "# trees = 150, alpha = 0.15, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.146017\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1008.45\n",
+    "\n",
+    "# trees = 150, alpha = 0.17, max_depth = 5\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.14569\n",
+    "#Root Mean Squared Error (RMSE) on test data = 1007.59\n",
+    "\n",
+    "\n",
+    "# trees = 150, alpha = 0.17, max_depth = 6\n",
+    "\n",
+    "#Root Mean Squared Percentage Error (RMSPE) on test data = 0.131477\n",
+    "#Root Mean Squared Error (RMSE) on test data = 933.565"
    ]
   }
  ],
